--- a/templates/blog-posts.mustache
+++ b/templates/blog-posts.mustache
@@ -4,8 +4,8 @@
 	<div class="blog-posts">
 		{{#posts}}
 			<div class="blog-post col-md-3">
-				<div class="blog-post-image"></div>
-				<p class="blog-post-title"></p>
+				<div class="blog-post-image" style="background: transparent url('{{image}}') no-repeat scroll center / cover"></div>
+				<p class="blog-post-title">{{title}}</p>
 			</div>
 		{{/posts}}
 	</div>
