--- a/modules/blog-posts.style.less
+++ b/modules/blog-posts.style.less
@@ -7,6 +7,7 @@
 #blog-posts {
 
 	margin: 30px 0 50px 0;
+	padding: 0;
 
 	.blog-posts-title {
 		color: @blue;
@@ -70,8 +71,10 @@
 		text-align: right;
 		margin: 9px 0 0 0;
 
-		& > a {
+		& > button {
 			color: @blue;
+			border: none;
+			outline: none;
 			text-decoration: none !important;
 			font-weight: 800;
 			background: transparent url('../assets/images/more-arrows.png') no-repeat scroll 0 center;
@@ -79,6 +82,10 @@
 
 			&:hover {
 				color: @blue;
+			}
+
+			&:disabled {
+				cursor: no-drop;
 			}
 		}
 	}
