added responsive support

--- a/modules/blog-posts.style.less
+++ b/modules/blog-posts.style.less
@@ -19,6 +19,9 @@
 		display: flex;
 		justify-content: space-between;
 		padding: 17px 0;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-content: flex-start;
     	border-bottom: @border;
     	border-top: @border;
 
