--- a/templates/blog-posts.mustache
+++ b/templates/blog-posts.mustache
@@ -8,7 +8,7 @@
 	</div>
 
 	<p class="blog-posts-more-wrap">
-		<button class="blog-posts-more">{{ moreText }}</button>
+		<button class="blog-posts-more">{{ moreText }} <div class="blogposts-loader"></div></button>
 	</p>
 
 </div>
