appending additional posts instead of replacing them

--- a/modules/blog-posts.style.less
+++ b/modules/blog-posts.style.less
@@ -18,7 +18,7 @@
 	.blog-posts-wrap {
 		display: flex;
 		justify-content: space-between;
-		padding: 17px 0;
+		padding: 17px 0 0 0;
 		flex-direction: row;
 		flex-wrap: wrap;
 		align-content: flex-start;
@@ -31,6 +31,7 @@
 			background: @gray;
 			display: flex;
 			flex-direction: column;
+			margin: 0 0 17px 0;
 
 			.blog-post-title {
 				margin: 0;
