--- a/templates/blog-posts.mustache
+++ b/templates/blog-posts.mustache
@@ -1,14 +1,12 @@
 <div id="blog-posts" class="col-md-12 hidden-print noprint">
 	<h2 class="blog-posts-title">{{ titleText }}</h2>
-
 	<div class="blog-posts-wrap">
 		{{#posts}}
 			{{>blog-post}}
 		{{/posts}}
 	</div>
-
-	<p class="blog-posts-more-wrap">
-		<button class="blog-posts-more">{{ moreText }} <div class="blogposts-loader"></div></button>
-	</p>
-
+	<div class="blog-posts-more-wrap">
+		<button class="blog-posts-more-btn">{{ moreText }} <span class="fa fa-angle-double-left blog-posts-more-icon" aria-hidden="true"></span></button>
+		<div class="blog-posts-more-loading-text">{{ loadingText }} <span class="fa fa-spin fa-circle-o-notch" aria-hidden="true"></span></div>
+	</div>
 </div>
