Redesign & remove dynamic loading of additional posts

--- a/templates/blog-post.mustache
+++ b/templates/blog-post.mustache
@@ -1,9 +1,6 @@
-<div class="blog-post col-md-3">
-	<p class="blog-post-image">
-		<a href="{{{url}}}" rel="noopener" target="_blank" class="blog-post-image" style="background: transparent url('{{{image}}}') no-repeat scroll center / cover"></a>
-	</p>
-
-	<p class="blog-post-title">
-		<a href="{{{url}}}" rel="noopener" target="_blank">{{{title}}}</a>
-	</p>
-</div>
+<a class="blog-post" href="{{{url}}}" rel="noopener" target="_blank">
+    <div class="blog-post-image">
+	    <img src="{{{image}}}" alt=""></img>
+    </div>
+	<div class="blog-post-title">{{{title}}}</div>
+</a>
