--- a/modules/blog-posts.style.less
+++ b/modules/blog-posts.style.less
@@ -1,8 +1,6 @@
 @import 'mediawiki.mixins';
 
 @blue: #355a86;
-@gray: #e3e3e3;
-@border: 1px solid @blue;
 
 #blog-posts {
 	margin: 30px 0 50px 0;
@@ -15,85 +13,53 @@
 	margin-bottom: 0;
 }
 
-.blog-posts-wrap {
-	display: flex;
-	justify-content: space-between;
-	padding: 17px 0 0 0;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-content: flex-start;
-	border-bottom: @border;
-	border-top: @border;
+.blog-posts-more-link {
+	float: right;
+	font-size: 14px;
+	position: relative;
+	bottom: -5px;
+	text-decoration: none;
 
-	.blog-post {
-		padding: 0;
-		width: 24%;
-		background: @gray;
-		display: flex;
-		flex-direction: column;
-		margin: 0 0 17px 0;
-
-		.blog-post-title {
-			margin: 0;
-			display: block;
-
-			& > a {
-				width: 100%;
-				padding: 14px 8px;
-				display: block;
-				height: 100%;
-				color: @blue;
-				font-weight: 700;
-				text-decoration: none;
-			}
-		}
-
-		.blog-post-image {
-			height: 160px;
-			width: 100%;
-			margin: 0;
-
-			& > a {
-				height: 100%;
-				display: block;
-			}
-		}
-
-		@media screen and (max-width: 768px) {
-			width: 49%;
-			margin: 0 0 13px 0;
-		}
-
-		@media screen and (max-width: 576px) {
-			width: 100%;
-		}
+	&:hover,
+	&:focus,
+	&:active {
+		text-decoration: revert;
 	}
+
 }
 
+.blog-posts-body {
+	display: grid;
+	grid-auto-columns: minmax(0, 1fr);
+	grid-auto-flow: column;
+	grid-gap: 25px;
+	margin-top: 40px;
 
-.blog-posts-more-wrap {
-	text-align: right;
-	margin: 9px 0 0 0;
-
-	& .fa {
-		font-weight: 800;
+	@media ( max-width: 768px ) {
+		grid-auto-flow: row;
 	}
 
-	.blog-posts-more-btn,
-	.blog-posts-more-loading-text {
-		color: @blue;
-		border: none;
-		outline: none;
-		text-decoration: none !important;
-		font-weight: 800;
-		background-color: transparent;
+	.blog-post {
+		display: block;
+		text-align: center;
+		border: 1px solid #C1C5C9;
+		border-radius: 3px;
+		font-size: 20px;
+		text-decoration: none;
+	}
 
-		&:hover {
-			color: @blue;
+	.blog-post-image {
+		img {
+			object-fit: fill;
+			height: 150px !important;
+			object-position: top;
+			width: 100%;
+			max-width: 100%;
 		}
 	}
 
-	.blog-posts-more-loading-text {
-		display: none;
+	.blog-post-title {
+		padding: 20px;
 	}
+
 }
